--- a/Proyecto/views/Login.html
+++ b/Proyecto/views/Login.html
@@ -18,17 +18,17 @@
         <nav class="navbar navbar-expand-sm header__nav">
             <div class="container">
                 <img class="header__nav__img" src="../assets/img/icon.png" />
-                <a class="header__nav__logo" href="index.html">Resonancia</a> <!-- Nombre del logo -->
+                <a class="header__nav__logo" href="/">Resonancia</a> <!-- Nombre del logo -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav header__nav__links">
                         <li class="nav-item header__nav__links__item">
-                            <a class="nav-link" href="contactUs.html">Contact</a>
+                            <a class="nav-link" href="/contactUs">Contact</a>
                         </li>
                         <li class="nav-item header__nav__links__item">
-                            <a class="nav-link" href="aboutUs.html">About Us</a>
+                            <a class="nav-link" href="/aboutUs">About Us</a>
                         </li>
                     </ul>
                 </div>
@@ -53,13 +53,13 @@
             <br>
 
             <div class="center">
-                <a href="Registro.html" class="buy-button" >Create an User</a>
+                <a href="/Registro" class="buy-button" >Create an User</a>
             </div>
             <br>
             <h4 style="text-align: center; color: white;" for="exampleInputRecover">Do you need to recover your account?</h4>
             <div class="center">
                 <br>
-                <a href="RecoverAccount.html" class="buy-button" >Recover Account</a>
+                <a href="/RecoverAccount" class="buy-button" >Recover Account</a>
             </div>
             <br>
           </form>
@@ -74,7 +74,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
-        <script src="/Proyecto/jquery-3.6.0.min.js"></script>
+        <script src="/jquery-3.6.0.min.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="../assets/js/login.js"></script>
