--- a/Proyecto/views/drums.html
+++ b/Proyecto/views/drums.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-sm header__nav">
             <div class="container">
                 <img class="header__nav__img" src="../assets/img/icon.png" />
-                <a class="header__nav__logo" href="/Proyecto/views/index.html">Resonancia</a> <!-- Nombre del logo -->
+                <a class="header__nav__logo" href="/index">Resonancia</a> <!-- Nombre del logo -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -88,10 +88,10 @@
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="/Proyecto/jquery-3.6.0.min.js"></script>
+        <script src="/jquery-3.6.0.min.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="../assets/js/header.js"></script>
-        <script src="/Proyecto/assets/js/product.js"></script>
+        <script src="/assets/js/product.js"></script>
         <script src="../assets/js/categories.js"></script>
     </footer>
     </body>
