--- a/Proyecto/views/aboutUs.html
+++ b/Proyecto/views/aboutUs.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-sm header__nav">
             <div class="container">
                 <img class="header__nav__img" src="../assets/img/icon.png" />
-                <a class="header__nav__logo" href="/Proyecto/views/index.html">Resonancia</a> <!-- Nombre del logo -->
+                <a class="header__nav__logo" href="/">Resonancia</a> <!-- Nombre del logo -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -49,7 +49,7 @@
             <h1 class="our_mission_title text-center m-0">Why Choose Resonancia?</h1>
             <div>
                 <p class="our_mission_description">Our singular goal at Resonancia is simple – to ensure your satisfaction. This commitment is the driving force behind everything we do. We are here to help you achieve your musical aspirations by offering more than just products; we provide an experience that resonates with your passion for music.</p>
-                <a class="our_mission_button" href="contactUs.html">CONTACT US</a>
+                <a class="our_mission_button" href="/contactUs">CONTACT US</a>
             </div>    
         </section>
 
@@ -62,7 +62,7 @@
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="/Proyecto/jquery-3.6.0.min.js"></script>
+        <script src="/jquery-3.6.0.min.js"></script>
         <script src="../assets/js/header.js"></script>
     </footer>
 </body>
