--- a/Proyecto/views/index.html
+++ b/Proyecto/views/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-sm header__nav">
             <div class="container">
                 <img class="header__nav__img" src="../assets/img/icon.png" />
-                <a class="header__nav__logo" href="/Proyecto/views/index.html">Resonancia</a> <!-- Nombre del logo -->
+                <a class="header__nav__logo" href="/">Resonancia</a> <!-- Nombre del logo -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,7 +40,7 @@
                 <div>
                     <h1 class="main__content__banner__title">Find the most popular and efficient guitars on the market</h1>
                     <p class="main__content__banner__description">The guitar is the world’s most popular instrument, and it’s no wonder why. Resonancia carries a vast selection of guitars from the top manufacturers, including Fender,Ibanez,Yamaha,and many others!</p>
-                    <center><a class="main__content__banner__cta" href="guitar.html">VIEW GUITARS</a></center>
+                    <center><a class="main__content__banner__cta" href="/guitar">VIEW GUITARS</a></center>
                 </div>
             </div>
         </section>     
@@ -52,25 +52,25 @@
                 <div class="col-sm-12 col-md-3 item">
                     <img src="../assets/img/guitarth1.jpg">
                     <h4>Guitars</h4>
-                    <a class="button" href="guitar.html">VIEW</a>
+                    <a class="button" href="/guitar">VIEW</a>
                 </div>
 
                 <div class="col-sm-12 col-md-3 item">
                     <img src="../assets/img/drumth1.jpg">
                     <h4>Drum and Percussion</h4>
-                    <a class="button" href="drums.html">VIEW</a>
+                    <a class="button" href="/drums">VIEW</a>
                 </div>
 
                 <div class="col-sm-12 col-md-3 item">
                     <img src="../assets/img/bassth1.jpg">
                     <h4>Bass</h4>
-                    <a class="button" href="bass.html">VIEW</a>
+                    <a class="button" href="/bass">VIEW</a>
                 </div>
 
                 <div class="col-sm-12 col-md-3 item">
                     <img src="../assets/img/keyboardth1.jpg">
                     <h4>Keyboards</h4>
-                    <a class="button" href="keyboard.html">VIEW</a>
+                    <a class="button" href="/keyboard">VIEW</a>
                 </div>
             </div>
 
@@ -203,7 +203,7 @@
             <section class="our_mission">
                 <h1 class="our_mission_title text-center m-0">Do you need some assistance?</h1>
                 <div>
-                    <a class="our_mission_button" href="contactUs.html">CONTACT US</a>
+                    <a class="our_mission_button" href="/contactUs">CONTACT US</a>
                 </div>  
         
         </section>
@@ -218,7 +218,7 @@
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="/Proyecto/jquery-3.6.0.min.js"></script>
+        <script src="/jquery-3.6.0.min.js"></script>
         <script src="../assets/js/header.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="../assets/js/purchaseService.js"></script>
