--- a/Proyecto/views/product.html
+++ b/Proyecto/views/product.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm header__nav">
             <div class="container">
                 <img class="header__nav__img" src="../assets/img/icon.png" />
-                <a class="header__nav__logo" href="/Proyecto/views/index.html">Resonancia</a> <!-- Nombre del logo -->
+                <a class="header__nav__logo" href="/">Resonancia</a> <!-- Nombre del logo -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -113,7 +113,7 @@
                         </div>
             
                         <div class="center">
-                          <a href="#" class="buy-button" id="createServiceOrder">Purchase</a>
+                          <a href="#" class="buy-button" id="createPurchase">Purchase</a>
                         </div>
             
                       </div>
@@ -123,10 +123,10 @@
                         <h4 class="form-label" for="paymentlabelgeneric">Or Select other payment method:</h4>
                         <br>
                         <div>
-                          <a href="#" class="buy-button" id="createServiceOrderPaypal">Paypal</a>
+                          <a href="#" class="buy-button" id="createPurchaseProductPaypal">Paypal</a>
                         </div>
                         <br>
-                        <a href="#" class="buy-button" id="createServiceOrderBank">Bank Transfer</a>
+                        <a href="#" class="buy-button" id="createPurchaseProductBank">Bank Transfer</a>
                       </div>
                     </form>
                   </div>
@@ -146,10 +146,10 @@
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="/Proyecto/jquery-3.6.0.min.js"></script>        
+        <script src="/jquery-3.6.0.min.js"></script>        
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="../assets/js/header.js"></script>
-        <script src="/Proyecto/assets/js/product.js"></script>
+        <script src="/assets/js/product.js"></script>
         <script src="../assets/js/purchase.js"></script>
         <script src="../assets/js/validationPurchase.js"></script>
 </footer>
