--- a/Proyecto/views/index.html
+++ b/Proyecto/views/index.html
@@ -8,6 +8,8 @@
     <link rel="apple-touch-icon" sizes="192x192" href="../assets/img/logo192.png">
 
     <title>Resonancia - Music Store</title>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/7.2.0/introjs.min.css" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -225,6 +227,8 @@
         <script src="../assets/js/validationPurchase.js"></script>
         <script src="../assets/js/index.js"></script>
         <script src="../assets/js/Service_Worker.js"></script>
+        <script src="../assets/js/intro.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/7.2.0/intro.min.js"></script>
     </footer>
 </body>
 
