--- a/Proyecto/views/guitar.html
+++ b/Proyecto/views/guitar.html
@@ -90,7 +90,7 @@
     <script src="/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../assets/js/header.js"></script>
-    <script src="/assets/js/product.js"></script>
+    <script src="../assets/js/product.js"></script>
     <script src="../assets/js/categories.js"></script>
 </footer>
 </body>
